<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="display_name">Display Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_display_name">Display Name</string>
    <string name="reg_password">Password</string>
    <string name="create_account">Create account</string>
    <string name="reg_error">Cannot Sign in. Please check the form and try again.</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="reg_create_account">Create Account</string>
    <string name="already_have_account">Already have Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="log_email">Your Email</string>
    <string name="log_password">Password</string>
    <string name="log_btn_login">Login</string>
    <string name="reg_dialog_title">Registering User</string>
    <string name="reg_dialog_message">Please wait while we create your account!</string>
    <string name="login_title">Login</string>
    <string name="login_dialog_title">Login In</string>
    <string name="login_dialog_message">Please wait while we check your credentials.</string>
    <string name="log_error">Cannot Sign in. Please check the form and try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_change_image">Change image</string>
    <string name="settings_change_status">Change Status</string>
    <string name="default_status">Hi there, I\'m using ChatApp</string>
    <string name="status_edit">Account Status</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes_btn_status">Save Changes</string>
    <string name="saving_changes_status">Saving Changes</string>
    <string name="status_message">Please wait while we save the changes</string>
    <string name="status_error">There was some errors in saving Changes.</string>
</resources>
