<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mruniversotec.chatapp.SettingsActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/profile_default" />

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Display Name"
        android:textSize="24dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_status"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/settings_name"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_image"
        android:backgroundTint="#ffffff"
        android:textColor="@color/colorPrimary"
        android:layout_alignBottom="@+id/settings_image_btn"
        android:layout_alignStart="@+id/settings_image_btn"
        android:layout_marginBottom="48dp"
        android:layout_alignEnd="@+id/settings_image_btn" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_status"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_marginBottom="74dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_image"
        android:layout_alignEnd="@+id/settings_image" />

</RelativeLayout>
